# enn-trainer

./: .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CONTRIBUTING.md  README.md  config-schema.ron  pyproject.toml  tutorial.md
.github/workflows/: publish.yaml
configs/xprun/: train.ron  trainbc.ron
docs/: README.md  requirements-scatter.txt  requirements.txt
docs/source/: conf.py  index.rst  internals.rst  quick-start-guide.rst
enn_trainer/: __init__.py  agent.py  config.py  eval.py  gae.py  hypertuna.py  load_checkpoint.py  ppo.py  rollout.py  supervised.py  train.py
enn_trainer/tests/: test_configs.py  test_training.py
