[tool.poetry]
name = "enn-trainer"
version = "0.1.1"
description = "PPO and supervised training loops compatible with entity-gym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
tensorboard = "^2.7.0"
msgpack = "^1.0.3"
msgpack-numpy = "^0.4.7"
tqdm = "^4.62.3"
ragged-buffer = "^0.3.9"
wandb = "^0.12.7"
optuna = "^2.10.0"
moviepy = "^1.0.3"
click = "^8.0.4"
hyperstate = "^0.3.9"
entity-gym = "^0.1.2"
rogue-net = "^0.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
black = "^22.3.0"
mypy = "^0.950"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
autoapi = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
